--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "prettier": "prettier --write --plugin-search-dir=. ."
+    "prettier": "prettier --write --plugin-search-dir=. .",
+    "test": "exit 0"
   },
   "devDependencies": {
     "@smui-extra/accordion": "^6.0.0-beta.16",
