--- a/package.json
+++ b/package.json
@@ -27,8 +27,6 @@
     "@smui/tooltip": "^6.0.0-beta.16",
     "@whoicd/icd11ect": "^1.5.0",
     "@xstate/svelte": "^2.0.0",
-    "moment": "^2.29.3",
-    "svelte-material-ui": "^6.0.0-beta.16",
-    "xstate": "^4.32.1"
+    "moment": "^2.29.3"
   }
 }
