--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "test": "exit 0"
   },
   "devDependencies": {
+    "@material/typography": "^14.0.0",
     "@smui-extra/accordion": "^6.0.0-beta.16",
     "@smui/button": "^6.0.0-beta.16",
+    "@smui/card": "^6.0.0-beta.16",
     "@smui/dialog": "^6.0.0-beta.16",
     "@smui/layout-grid": "^6.0.0-beta.16",
     "@smui/select": "^6.0.0-beta.16",
     "@smui/textfield": "^6.0.0-beta.16",
+    "@smui/top-app-bar": "^6.0.0-beta.16",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
