--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vite": "^2.9.9"
   },
   "dependencies": {
+    "@smui/icon-button": "^6.0.0-beta.16",
     "@smui/tooltip": "^6.0.0-beta.16",
     "@whoicd/icd11ect": "^1.5.0",
     "@xstate/svelte": "^2.0.0",
